feat: add server submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "CodeFormer"]
 	path = CodeFormer
 	url = https://github.com/sczhou/CodeFormer
+[submodule "server"]
+	path = server
+	url = https://github.com/TMK04/vampp-server.git
 [submodule "website"]
 	path = website
 	url = https://github.com/TMK04/vampp-website.git
