--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-ROOT_DIR=/
-SCRIPT_AWS=/
-SCRIPT_HUGGINGFACE=/
+ROOT_DIR=/notebooks
+SCRIPT_AWS=/storage/setup/aws/setup.sh
+SCRIPT_HUGGINGFACE=/storage/setup/huggingface.sh
